objects/Lead_Enrichment_Response_PE__c.object
<CustomObject>
    <fields>
        <fullName>AcuraCurrentProductsOwned2_TXT__c</fullName>
        <label>Acura Current Products Owned 2</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AcuraCurrentProductsOwned_TXT__c</fullName>
        <label>Acura Current Products Owned</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AcuraHighValueTrimlinePropensity_NUM__c</fullName>
        <label>Acura High Value Trimline Propensity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcuraOwnershipStatusHousehold_TXT__c</fullName>
        <label>Acura Ownership Status Household</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcuraOwnershipStatus_TXT__c</fullName>
        <label>Acura Ownership Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Error_CD__c</fullName>
        <label>Address Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Error_Description_TXT__c</fullName>
        <label>Address Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address_Status_TXT__c</fullName>
        <label>Address Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cell_Phone_Error_CD__c</fullName>
        <description>Cell Phone Error Code</description>
        <label>Cell Phone Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cell_Phone_Error_Description_TXT__c</fullName>
        <description>Cell Phone Error Description</description>
        <label>Cell Phone Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CleansedAddress_TXT__c</fullName>
        <label>Cleansed Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DateofLastService_DT__c</fullName>
        <label>Date of Last Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_CheckedDate_TXT__c</fullName>
        <label>Email Checked Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Error_CD__c</fullName>
        <label>Email Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Error_Description_TXT__c</fullName>
        <label>Email Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Error_CD__c</fullName>
        <label>Home Phone Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Error_Description_TXT__c</fullName>
        <label>Home Phone Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HondaCurrentProductsOwned2_TXT__c</fullName>
        <label>Honda Current Products Owned 2</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HondaCurrentProductsOwned_TXT__c</fullName>
        <label>Honda Current Products Owned</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HondaHighValueTrimlinePropensity_NUM__c</fullName>
        <label>Honda High Value Trimline Propensity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HondaOwnershipStatusHousehold_TXT__c</fullName>
        <label>Honda Ownership Status Household</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HondaOwnershipStatus_TXT__c</fullName>
        <label>Honda Ownership Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_SF_ID__c</fullName>
        <label>Lead SF ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Description_TXT__c</fullName>
        <label>Location Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location_Error_CD__c</fullName>
        <label>Location Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Error_Description_TXT__c</fullName>
        <label>Location Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location_Status_TXT__c</fullName>
        <label>Location Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Error_CD__c</fullName>
        <label>Model Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Error_Description_TXT__c</fullName>
        <label>Model Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Model_IMG__c</fullName>
        <label>Model Image</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Model_Name_NM__c</fullName>
        <label>Model Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PECurrentProductsOwned_TXT__c</fullName>
        <label>PE Current Products Owned</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PEOwnershipStatusHousehold_TXT__c</fullName>
        <label>PE Ownership Status Household</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PEOwnershipStatus_TXT__c</fullName>
        <label>PE Ownership Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSPCurrentProductsOwned2_TXT__c</fullName>
        <label>PSP Current Products Owned 2</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PSPCurrentProductsOwned_TXT__c</fullName>
        <label>PSP Current Products Owned</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PSPOwnershipStatusHousehold_TXT__c</fullName>
        <label>PSP Ownership Status Household</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSPOwnershipStatus_TXT__c</fullName>
        <label>PSP Ownership Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreferredDealerNumber_NUM__c</fullName>
        <label>Preferred Dealer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reply_id__c</fullName>
        <label>Reply id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFMC_Sales_description__c</fullName>
        <label>SFMC Sales description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFMC_Sales_errorcode__c</fullName>
        <label>SFMC Sales errorcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFMC_Sales_errordescription__c</fullName>
        <label>SFMC Sales errordescription</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFMC_Sales_status__c</fullName>
        <label>SFMC Sales status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFMC_Service_description__c</fullName>
        <label>SFMC Service description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFMC_Service_errorcode__c</fullName>
        <label>SFMC Service errorcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFMC_Service_errordescription__c</fullName>
        <label>SFMC Service errordescription</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFMC_Service_status__c</fullName>
        <label>SFMC Service status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFMC_description_TXT__c</fullName>
        <label>SFMC Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFMC_errorcode_TXT__c</fullName>
        <label>SFMC Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFMC_errordescription_TXT__c</fullName>
        <label>SFMC Error Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFMC_status_TXT__c</fullName>
        <label>SFMC Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesRelatedDealerNumber__c</fullName>
        <label>SalesRelatedDealerNumber_</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceRelatedDealerNumber__c</fullName>
        <label>ServiceRelatedDealerNumber_</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidAddress_FLG__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Valid Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ValidCellPhone_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Valid Cell Phone Number</description>
        <label>Valid Cell Phone Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ValidEmail_FLG__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Valid Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ValidPhoneNum_FLG__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Valid Phone Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valid_Model_ID_FLG__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Valid Model ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YourDealershipServicesLast60Mths_NUM__c</fullName>
        <label>Your Dealership Services Last 60 Mths</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YourDealershipSvsSpentLast60Mth_NUM__c</fullName>
        <label>Your Dealership Svs Spent Last 60 Mth</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Lead Enrichment Response</label>
    <nameField>
        <label>Lead Enrichment Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Enrichment Response</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>